# django-react-starter

./: .gitignore
backend/: README.md  pyproject.toml
backend/src/apis/: serializers.py  views.py
backend/src/backend/: settings.py  urls.py
backend/src/books/: custom_permissions.py  dbfaker.py  models.py  serializer.py  test.py  urls.py  views.py
backend/src/books/migrations/: 0001_initial.py  0002_alter_book_published_date.py
backend/src/console/: __init__.py  admin.py  models.py  serializers.py  utils.py
backend/src/console/migrations/: 0001_initial.py  0001_initializing_custom_user_model.py  0002_alter_customuser_options.py  0003_rename_modified_customuser_last_modified.py
backend/src/job_postings/: models.py  tests.py
backend/src/job_postings/migrations/: 0001_inital_faked_migrations.py  0002_to_roll_back.py  0003_alter_skillsjobdim_job_delete_skillsjobdimdim.py
backend/src/notes/: models.py  serializers.py  tests.py  urls.py  views.py
backend/src/notes/migrations/: 0001_initial.py
frontend/: package-lock.json
frontend/src/: App.jsx
