[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Mohsin Ali <mohsinalisep@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

