[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Mohsin Ali <mohsinalisep@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
python-decouple = "^3.8"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.6.0"
djangorestframework-simplejwt = "^5.3.1"
random-username = "^1.0.2"
faker = "^30.8.2"
django-filter = "^24.3"
drf-yasg = "^1.21.8"
psycopg = {extras = ["binary"], version = "^3.2.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

